--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
     "revision": "0",
     "image": "flecs.azurecr.io/com.somic-packaging.labrador",
     "multiInstance": false,
-    "editor": ":9080",
+    "editor": ":9080/test",
     "ports": [
-        "9080:80"
+        "9080:8080"
     ]
 }
